[gd_scene load_steps=19 format=3 uid="uid://bh2y738ylrnqm"]

[ext_resource type="Script" path="res://scenes/machines/crafter.gd" id="1_nqlwn"]
[ext_resource type="Texture2D" uid="uid://dyxvfkf178e24" path="res://assets/machines/crafter/crafter.png" id="2_o8gvy"]
[ext_resource type="Resource" uid="uid://ddet442k06thk" path="res://scenes/materials/crystal.tres" id="2_yrhu2"]
[ext_resource type="Script" path="res://scenes/machines/recipe.gd" id="3_qa8cw"]
[ext_resource type="Script" path="res://scenes/machines/internal_inventory.gd" id="3_qny88"]
[ext_resource type="Resource" uid="uid://gqldc7c0s0ce" path="res://resources/build_info/crafter_info.tres" id="4_3ny8h"]
[ext_resource type="Resource" uid="uid://f004kgvtcc22" path="res://scenes/materials/iron.tres" id="4_8iyxv"]
[ext_resource type="Resource" uid="uid://clmvr10nax25o" path="res://scenes/materials/gold.tres" id="5_6irh0"]
[ext_resource type="PackedScene" uid="uid://cbmugsoctody6" path="res://scenes/machines/output.tscn" id="7_7qja8"]

[sub_resource type="Resource" id="Resource_jixnh"]
script = ExtResource("3_qa8cw")
material = ExtResource("2_yrhu2")
melt_reqs = Array[int]([0, 5, 0, 0, 0])
solid_reqs = Array[int]([0, 0, 1, 5, 0])

[sub_resource type="AtlasTexture" id="AtlasTexture_7a125"]
atlas = ExtResource("2_o8gvy")
region = Rect2(0, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_806hp"]
atlas = ExtResource("2_o8gvy")
region = Rect2(54, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2v1a"]
atlas = ExtResource("2_o8gvy")
region = Rect2(108, 0, 54, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_7da7u"]
animations = [{
"frames": [{
"duration": 7.0,
"texture": SubResource("AtlasTexture_7a125")
}, {
"duration": 7.0,
"texture": SubResource("AtlasTexture_806hp")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_m2v1a")
}, {
"duration": 7.0,
"texture": SubResource("AtlasTexture_806hp")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_m2v1a")
}, {
"duration": 7.0,
"texture": SubResource("AtlasTexture_806hp")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_m2v1a")
}, {
"duration": 7.0,
"texture": SubResource("AtlasTexture_806hp")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_m2v1a")
}, {
"duration": 7.0,
"texture": SubResource("AtlasTexture_806hp")
}],
"loop": true,
"name": &"default",
"speed": 13.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vvoo"]
size = Vector2(52, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xev7i"]
size = Vector2(52, 52)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ypay3"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:builder_id")
properties/2/spawn = true
properties/2/replication_mode = 0
properties/3/path = NodePath(".:modulate")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:offset_vec")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e8ak"]
size = Vector2(14, 52)

[node name="Crafter" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_nqlwn")
recipe = SubResource("Resource_jixnh")
offset_vec = Vector2(9, 9)
info = ExtResource("4_3ny8h")
rotable = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7da7u")
frame_progress = 0.84226

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_3vvoo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xev7i")

[node name="InternalInventory" type="Node" parent="."]
script = ExtResource("3_qny88")
materials = Array[Resource("res://scenes/materials/material.gd")]([ExtResource("4_8iyxv"), ExtResource("5_6irh0")])

[node name="Output" parent="." instance=ExtResource("7_7qja8")]
position = Vector2(33, 18)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ypay3")

[node name="Input" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Input"]
position = Vector2(-23, 0)
shape = SubResource("RectangleShape2D_0e8ak")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Input" to="." method="_on_input_area_entered"]
